2.34.2:

2011-09-06  Mathias Lorente  <mathias.lorente@free.fr>

	Node::create_new_child_node(): Use the default namespace if none is specified.

	* libxml++/nodes/node.cc: This is better than just ignoring it.
	Bug #656110

2011-07-20  Murray Cumming  <murrayc@murrayc.com>

	ContentNode::get_content(): Fix a documentation typo.

	* libxml++/nodes/contentnode.h: Mention &gt; instead of &qt (a q 
	instead of a g, and no ;.).

2011-07-20  Mathias Lorente  <mathias.lorente@free.fr>

	Add Element::add_child_cdata().

	* libxml++/nodes/element.[h|cc]: Add add_child_cdata(), using 
	xmlNewCDataBlock(), like the existing add_child_text().
	* examples/sax_parser_build_dom/example.xml:
	* examples/sax_parser_build_dom/svgparser.[h|cc]: Use the new API.

2.34.1:

2011-04-17  Murray Cumming  <murrayc@murrayc.com>

	Fix distcheck.

	* Makefile.am: Specify the full path to docbook-customisation.xsl,
	which is apparently necessary with the autotools that I have here.

2011-04-17  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with --enable-warnings=fatal.

	* configure.ac: Use -no-long-long to avoid an (apparently new) compiler
	warning about long long not being supported by C++98. glibmm already had
	this option.

2011-04-17  Murray Cumming  <murrayc@murrayc.com>

	Do not require mm-common during the tarball build.

	* configure.ac: Add a MM_CONFIG_DOCTOOL_DIR() call.

2.34.0:

2011-02-24  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with the changed linker behaviour on Ubuntu Natty.

	* Makefile.am: Link the examples to glibmm explicitly.

2.33.2:

2011-02-11  Murray Cumming  <murrayc@murrayc.com>

	Node::remove_child(): Fix a use of deleted memory

	* libxml++/nodes/node.cc:
	Use a temporary variable to avoid accessing the node C++ instance after we
	have deleted it. Valgrind foudn this.
	Also remove the comment about the libxml deleting our C++ instance via a
	callback, because we don't do that anymore.

2010-11-26  Murray Cumming  <murrayc@murrayc.com>
