@@ -1,3 +1,11 @@
+2011-09-09  Murray Cumming  <murrayc@murrayc.com>
+
+	Document: write_to_*(): Make sure that we write UTF-8 out.
+
+	* libxml++/document.cc: Because the xmlDocDump*() functions use some other 
+	encoding if you specify NULL, causing errors such as:
+	xmlEscapeEntities : char out of range
+
 2.34.2:
 
 2011-09-06  Mathias Lorente  <mathias.lorente@free.fr>
